--- a/src/app/Documentos/gcfdi33/gcfdi33.component.html
+++ b/src/app/Documentos/gcfdi33/gcfdi33.component.html
@@ -2,18 +2,19 @@
 
 <div class="container">
     <div class="panel panel-primary">
-        <div class="panel-heading" id="panels">Emisor</div>
-          <div class="panel-body">
-              <form class="form-inline" role="form-horizontal">
-                  <!--<div class="col-md-12 col-lg-12">-->
-      
+            <div class="panel-heading" id="panels">Emisor</div>
+             <div class="panel-body d-flex justify-content-center">
+
+              <form class="form-inline col-lg-12" role="form-horizontal">      
                     <div class="row">
       
                        <div class="col-lg-4 form-group">     
                            <div class="col-lg-5">    
-                              <font size="1">*RFC:</font>     
+                              <font size="1">
+                                  *RFC:
+                              </font>     
                            </div>
-                           <div class="col-lg-7 col-md-12 form-group">
+                           <div class="col-lg-4">
                               <input name="rfc3" 
                                type="text" class="form-control">
                            </div>                   
@@ -23,7 +24,7 @@
                            <div class="col-lg-5">    
                               <font size="1">Sucursal:</font>              
                            </div>
-                           <div class="col-lg-7 col-md-12">   
+                           <div class="col-lg-4">   
                              <input name="sucursal" 
                               type="text" class="form-control">              
                            </div>    
@@ -34,7 +35,7 @@
                            <div class="col-lg-5"> 
                              <font size="1">Razón social:</font>                  
                            </div>
-                           <div class="col-lg-7 col-md-12">
+                           <div class="col-lg-4">
                              <input name="rSocial" 
                              type="text" class="form-control">
                            </div>   
@@ -48,7 +49,7 @@
                            <div class="col-lg-5">
                              <font size="1">Serie:</font> 
                            </div>
-                           <div class="col-lg-7 col-md-12">
+                           <div class="col-lg-4">
                                <input name="serie" 
                                type="text" class="form-control"> 
                            </div>                    
@@ -58,7 +59,7 @@
                            <div class="col-lg-5">
                              <font size="1">*Tipo de documento:</font> 
                            </div>
-                           <div class="col-sm-7"> 
+                           <div class="col-lg-4"> 
                                 <select class="custon-select form-control">
                                     <option value="">Sin Seleccionar</option>
                                     <option value="">FAC-Factura</option>
@@ -71,7 +72,7 @@
                            <div class="col-lg-5">
                              <font size="1">Tipo de comprobante:</font> 
                            </div>
-                           <div class="col-lg-7">  
+                           <div class="col-lg-4">  
                              <input name="tComprobante"
                              type="text" class="form-control">       
                            </div>   
@@ -86,7 +87,7 @@
                            <div class="col-lg-5">
                                <font size="1">Folio:</font>
                            </div>
-                           <div class="col-lg-7">
+                           <div class="col-lg-4">
                                <input name="folio"
                                type="text" class="form-control" placeholder="AAAA010203AAA"> <p></p>
                            </div> 
@@ -96,7 +97,7 @@
                            <div class="col-lg-5">
                                <font size="1">Titulo del comprobante:</font>    
                            </div>
-                           <div class="col-lg-7">
+                           <div class="col-lg-4">
                                <input name="titComprobante"
                                 type="text" class="form-control" placeholder="Titulo comprobante">
                            </div>    
@@ -106,7 +107,7 @@
                            <div class="col-lg-5">
                                <font size="1">*Fecha:</font>    
                            </div>
-                           <div class="col-lg-7">
+                           <div class="col-lg-4">
                                 <input type="text" id="fecha" name="fecha" />
                            </div>   
                        </div>
@@ -140,7 +141,7 @@
                             <div class="col-lg-5">
                                <font size="1">*Lugar de expedición:</font>
                             </div>
-                            <div class="col-lg-7">
+                            <div class="col-lg-4">
                                <input type="text" class="form-control">
                                
                             </div>
@@ -150,7 +151,7 @@
                             <div class="col-lg-5">
                                <font size="1">*Régimen fiscal:</font>
                             </div>
-                            <div class="col-lg-7">
+                            <div class="col-lg-4">
                                 <select name="" class="custon-select form-control"> 
                                     <option value="" disabled selected>Sin Seleccionar</option>
                                     <option value="">612-Personas</option>
@@ -163,7 +164,7 @@
                             <div class="col-lg-5">
                                <font size="1">Confirmación:</font>
                             </div>
-                            <div class="col-lg-7">
+                            <div class="col-lg-4">
                                <input type="text" class="form-control" placeholder="Código de Confirmación">
                             </div>
                         </div>
